5/17/11 consolidate model constants in MultipleCapacitorsModel for now
5/17/11 add capacitance control (reuse plate charge slider and bar meter value display)
5/16/11 reuse BatteryCapacitorCircuit as "single" circuit in Multi Capacitors tab, display battery and capacitor (no wires or capacitance control yet)
5/16/11 move creation of battery and capacitor into BatteryCapacitorCircuit, so that this can be our "single capacitor" circuit
5/16/11 add Capacitor.setCapacitance, which calculates and sets plate separation
5/16/11 redesign IntroductionModule: extending DielectricModule was confusing, so just reuse stuff from DielectricModule
5/16/11 add Air as a dielectric material
5/16/11 delete surface charge density (sigma) from the model implementation, it is shown in the design doc but not used in the model
5/16/11 Remove several setters from ICircuit, since these are specific to a capacitor whose geometry can be directly manipulated
5/16/11 factored out ICapacitor, common interface for all capacitor model elements
5/16/11 SimpleCapacitor, a simplified capacitor model for use in Multiple Capacitors tab
# 1.00.04 (51951) May 16, 2011
5/16/11 fix: #2850, with battery disconnected, user is controlling charge and capacitance, so compute plate voltages when charge or capacitance changes
5/11/11 fix: add missing notification in circuit.setBatteryConnected
5/11/11 fix use of addObserver(ChangeObserver) in Capacitor, add explicit initialization because there's no callback on registration
5/11/11 #2843, make E-Field Detector zoom buttons behave like bar meter zoom buttons (enabled only if relevant, immediately zoom to optimum scale)
5/5/11 enable Multiple Capacitors tab
# 1.00.03 (51551) May 5, 2011
5/5/11 demonstrate additional zoom changes
5/4/11 temporarily hide Multiple Capacitors tab
5/4/11 simplified the implementation of EFieldDetectorBodyNode.updateVisibility
5/4/11 #2843, fix reset of E-field detector zoom