@@ -16,8 +16,8 @@ import edu.colorado.phet.common.phetcommon.view.ControlPanel;
  */
 public class MultipleCapacitorsControlPanel extends ControlPanel {
 
-    public MultipleCapacitorsControlPanel( Resettable resettable, MultipleCapacitorsModel model, CLGlobalProperties globalProperties ) {
-        addControlFullWidth( new ViewControlPanel( model.plateChargesVisible, model.eFieldVisible ) );
+    public MultipleCapacitorsControlPanel( Resettable resettable, MultipleCapacitorsModel model, MultipleCapacitorsCanvas canvas, CLGlobalProperties globalProperties ) {
+        addControlFullWidth( new ViewControlPanel( canvas.plateChargesVisible, canvas.eFieldVisible ) );
         addControlFullWidth( new MetersControlPanel( model.getCapacitanceMeter(), model.getPlateChargeMeter(), model.getStoredEnergyMeter(), model.getVoltmeter(), model.getEFieldDetector() ) );
         addControlFullWidth( new CircuitChoiceControl( model.getCircuits(), model.currentCircuit ) );
         addResetAllButton( resettable );
